--- a/build.gradle
+++ b/build.gradle
@@ -2,11 +2,13 @@ plugins {
 	id 'org.springframework.boot' version '2.7.0'
 	id 'io.spring.dependency-management' version '1.0.11.RELEASE'
 	id 'java'
+	id 'groovy'
 }
 
 group = 'com.lukaszjakobczak'
 version = '0.0.1-SNAPSHOT'
-sourceCompatibility = '17'
+sourceCompatibility = 11
+targetCompatibility = 11
 
 repositories {
 	mavenCentral()
@@ -14,9 +16,19 @@ repositories {
 
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter'
-	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+	implementation "org.springframework.boot:spring-boot-starter-web"
+	implementation "org.projectlombok:lombok"
+	implementation 'org.codehaus.groovy:groovy:3.0.10'
+
+	//Testing
+	testImplementation platform("org.spockframework:spock-bom:2.0-groovy-3.0")
+	testImplementation 'org.spockframework:spock-core:2.1-groovy-3.0'
+	testImplementation 'org.spockframework:spock-junit4:2.1-groovy-3.0'
+	testImplementation 'org.spockframework:spock-spring:2.1-groovy-3.0'
+
+	testImplementation "org.springframework.boot:spring-boot-starter-test"
 }
 
-tasks.named('test') {
+test {
 	useJUnitPlatform()
 }
