--- a/build.gradle
+++ b/build.gradle
@@ -18,6 +18,7 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter'
 	implementation "org.springframework.boot:spring-boot-starter-web"
 	implementation "org.projectlombok:lombok"
+	annotationProcessor('org.projectlombok:lombok')
 	implementation 'org.codehaus.groovy:groovy:3.0.10'
 
 	//Testing
